--- a/templates/course.html
+++ b/templates/course.html
@@ -143,6 +143,8 @@
     <div class="header-container">
         <h1>Learning Agenda</h1>
         <a class="button" href="{{ url_for('index') }}">Home</a>
+        <a class="button" href="/chat">Chat</a>
+        <a class="button" href="/drawer">Practice</a>
     </div>
 
     <div class="info-container">
