--- a/templates/drawer.html
+++ b/templates/drawer.html
@@ -41,6 +41,7 @@
             background: linear-gradient(45deg, #84fab0, #8fd3f4);
             border-radius: 8px;
             border: none;
+            color: #464040;
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
             transition: background 0.3s ease, transform 0.2s ease, box-shadow 0.2s ease;
         }
@@ -49,6 +50,9 @@
             background: linear-gradient(45deg, #9fdfff, #beb9f0);
             transform: translateY(-3px);
             box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
+        }
+        .button {
+            border: none;
         }
         
     </style>
