--- a/templates/home.html
+++ b/templates/home.html
@@ -10,18 +10,22 @@
         integrity="sha512-..." crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <style>
+        * {
+            box-sizing: border-box;
+        }
         html,
         body {
             margin: 0;
             padding: 0;
             font-family: Arial, sans-serif;
             -webkit-overflow-scrolling: touch;
+            overflow-x: hidden ;
         }
 
         .home-grid-wrapper {
             display: grid;
             height: 100vh;
-            width: 100vw;
+            width: 100%;
             overflow: hidden;
             grid-template-columns: 1.7fr 1fr;
             grid-template-rows: 1.7fr 1fr;
@@ -173,10 +177,9 @@
                 display: flex;
                 flex-direction: column;
                 height: auto;
-                width: auto;
-                overflow: visible;
-                padding: 15px;
-                padding-top: 70px;
+                width:100%;
+                overflow: hidden;
+                padding: 70px 15px 15px 15px;
             }
 
             .lessons-container {
@@ -197,7 +200,7 @@
 
             .logout-button {
                 top: 25px;
-                right: -20px;
+                right: 15px;
                 font-size: 1.5rem;
             }
 
@@ -221,8 +224,7 @@
                 align-items: center;
                 padding: 0;
                 width: 100%;
-                margin-left: 20px;
-                margin-top: 10px;
+                margin: 0;
                 gap: 15px;
             }
 
@@ -231,7 +233,7 @@
                 backdrop-filter: none;
                 max-width: none;
                 width: 100%;
-                margin: 0;
+                margin: 10px 0;
             }
 
             .ring-progress-wrapper {
@@ -241,11 +243,12 @@
                 display: flex;
                 flex-direction: row;
                 align-items: center;
+                flex-wrap: wrap;
             }
 
             .ring-box {
                 width: 150px;
-                margin: 10px 0;
+                margin: 0;
                 padding: 15px;
                 border-radius: 0.8rem;
                 text-align: center;
