--- a/templates/drawer.html
+++ b/templates/drawer.html
@@ -128,8 +128,8 @@
     <div class="header-container">
         <h1>Finite State Machine Drawer</h1>
         <a class="button" href="{{ url_for('index') }}">Home</a>
+        <a class="button" href="{{ url_for('course_page') }}">Course</a>
         <a class="button" href="/chat">Chat</a>
-        <a class="button" href="/drawer">Practice</a>
     </div>
 
     <div class="module-container">
