--- a/templates/chat.html
+++ b/templates/chat.html
@@ -161,17 +161,9 @@
             margin-right: 0;
         }
 
-        .button {
-            font-weight: bold;
-            color: #5a5959;
-            background: linear-gradient(45deg, #d4fc79, #96e6a1);
-        }
-        @media (max-width: 768px) {
-            .header-container h1 {
-                display: none;
-            }
+        @media (max-width: 850px) {
             .header-container {
-                justify-content: space-between;
+                width: 100% !important;
             }
         }
     </style>
@@ -181,7 +173,7 @@
     <div class="header-container">
         <h1>Automata Chatbot</h1>
         <a class="button" href="{{ url_for('index') }}">Home</a>
-        <a class="button" href="/chat">Lessons</a>
+        <a class="button" href="{{ url_for('course_page') }}">Course</a>
         <a class="button" href="/drawer">Practice</a>
     </div>
 
